--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
         <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 
+    <script src="/scripts/init.js"></script>
     <script src="/scripts/game-animations.js"></script>
     <script src="/scripts/game-currencies.js"></script>
+    <script src="/scripts/game-main.js"></script>
 </body>
 
 </html>
