--- a/store.html
+++ b/store.html
@@ -71,6 +71,8 @@
         </footer>
     </main>
 
+    <script src="/scripts/init.js"></script>
     <script src="/scripts/game-currencies.js"></script>
+    <script src="/scripts/game-main.js"></script>
 </body>
 </html>
