--- a/achievements.html
+++ b/achievements.html
@@ -44,6 +44,7 @@
         </footer>
     </main>
 
+    <script src="/scripts/init.js"></script>
     <script src="/scripts/game-main.js"></script>
 </body>
 </html>
