--- a/wiki.html
+++ b/wiki.html
@@ -31,20 +31,20 @@
             </p>
             <h2>Joke explanations</h2>
             <article>
-                <a href="info/placeholder.html">Some very interesting article</a>
+                <a href="wiki/placeholder.html">Some very interesting article</a>
                 <p>This article provides some details about this very interesting queer thing.</p>
             </article>
             <article>
-                <a href="info/placeholder.html">Something else</a>
+                <a href="wiki/placeholder.html">Something else</a>
                 <p>This article, for a change, is something else. The something else in question has a very long summary, which serves to serve as a multi-line placeholder to show wrapping.</p>
             </article>
             <h2>General queer info</h2>
             <article>
-                <a href="info/placeholder.html">Why are you gae?</a>
+                <a href="wiki/placeholder.html">Why are you gae?</a>
                 <p>"Why are you gay?" is a question that has been haunting humanity for a long time. Why don't we answer it?</p>
             </article>
             <article>
-                <a href="info/placeholder.html">I'm out of ideas</a>
+                <a href="wiki/placeholder.html">I'm out of ideas</a>
                 <p>Thinking of placeholders is hard</p>
             </article>
             <h2>Done reading?</h2>
