--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p id="trans-gain" class="change"></p>
             </li>
             <li class="currency" id="poly">
-                <img src="/public/images/poly.webp" alt="poly">
+                <img src="/public/images/poly-static.webp" alt="poly">
                 <p id="poly-amount"></p>
                 <p id="poly-gain" class="change"></p>
             </li>
