--- a/store.html
+++ b/store.html
@@ -38,7 +38,7 @@
                 <p id="trans-gain" class="change"></p>
             </li>
             <li class="currency" id="poly">
-                <img src="/public/images/poly.webp" alt="poly">
+                <img src="/public/images/poly-static.webp" alt="poly">
                 <p id="poly-amount"></p>
                 <p id="poly-gain" class="change"></p>
             </li>
@@ -47,20 +47,6 @@
     <main>
         <h1>Shop</h1>
         <hr>
-        <article class="shop-item">
-            <div class="item-info-container">
-                <section class="item-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="item-image">
-                    <h2 class="item-name">Placeholder Item</h2>
-                    <p>(12)</p>
-                </section>
-                <section class="item-status">
-                    <p class="item-cost"><img src="/public/images/sibex-static.png" alt="bi" class="currency-icon"> 123</p>
-                    <button class="item-purchase"><i class="fa-solid fa-cart-shopping"></i></button>
-                </section>
-            </div>
-            <p class="item-desc">Increases x by y</p>
-        </article>
         <footer>
             <nav>
                 <ul>
@@ -74,5 +60,6 @@
     <script src="/scripts/init.js"></script>
     <script src="/scripts/game-currencies.js"></script>
     <script src="/scripts/game-main.js"></script>
+    <script src="/scripts/store.js"></script>
 </body>
 </html>
