--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <header>
         <ul>
             <li class="currency" id="bi">
-                <img src="/public/images/sibex-static.png" alt="bi">
+                <img src="/public/images/sibex-static.webp" alt="bi">
                 <p id="bi-amount"></p>
                 <p id="bi-gain" class="change"></p>
             </li>
             <li class="currency" id="gay">
-                <img src="/public/images/gex_new-static.png" alt="gay">
+                <img src="/public/images/gex_new-static.webp" alt="gay">
                 <p id="gay-amount"></p>
                 <p id="gay-gain" class="change"></p>
             </li>
             <li class="currency" id="trans">
-                <img src="/public/images/sranstex-static.png" alt="trans">
+                <img src="/public/images/sranstex-static.webp" alt="trans">
                 <p id="trans-amount"></p>
                 <p id="trans-gain" class="change"></p>
             </li>
