Fix main screen animations

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </li>
         </ul>
     </header>
-    <main id="clicker-heart"></main>
+    <img id="clicker-heart" alt="Click Heart"></img>
     <nav>
         <a href="store.html"><p>Store</p><i class="fa-solid fa-store"></i></a>
         <a href="achievements.html"><p>Achievements</p><i class="fa-solid fa-trophy"></i></a>
