New currency animations

--- a/store.html
+++ b/store.html
@@ -17,7 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/store.css">
     <link rel="stylesheet" href="/public/styles/topo-pattern.css">
-    <link rel="stylesheet" href="public/styles/currency-header.css">
+    <link rel="stylesheet" href="/public/styles/currency-header.css">
+    <link rel="stylesheet" href="/public/styles/explosions.css">
 </head>
 <body class="topography-pattern">
     <header>
@@ -56,6 +57,10 @@
             </nav>
         </footer>
     </main>
+    <div class="overlay hidden" style="display: none">
+        <img src="/public/images/saygex-static.webp" alt="" class="explosion-subject">
+        <p class="explosion-text hidden">New currency unlocked</p>
+    </div>
 
     <script src="/scripts/init.js"></script>
     <script src="/scripts/game-currencies.js"></script>
