Achievements + finishing touches

--- a/achievements.html
+++ b/achievements.html
@@ -22,18 +22,6 @@
     <main>
         <h1>Achievements</h1>
         <hr>
-        <article class="achievement">
-            <div class="achiev-info-container">
-                <section class="achiev-info">
-                    <img src="/public/images/gex_old.gif" alt="" class="achiev-image">
-                    <h2 class="achiev-name">Do some stuff</p>
-                </section>
-                <section class="achiev-status">
-                    <p class="achiev-done"><i class="fa-solid fa-square-check"></i></p>
-                </section>
-            </div>
-            <p class="achiev-desc">You can achieve this by ...</p>
-        </article>
         <footer>
             <nav>
                 <ul>
@@ -45,6 +33,7 @@
     </main>
 
     <script src="/scripts/init.js"></script>
-    <script src="/scripts/game-main.js"></script>
+    <script src="/scripts/achiev-service.js"></script>
+    <script src="/scripts/achievements.js"></script>
 </body>
 </html>
