--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="/public/styles/currency-header.css">
     <link rel="stylesheet" href="/public/styles/index.css">
     <link rel="stylesheet" href="/public/styles/topo-pattern.css">
-    <link rel="stylesheet" href="public/styles/currency-header.css">
+    <link rel="stylesheet" href="/public/styles/popups.css">
 </head>
 
 <body class="topography-pattern">
@@ -47,7 +48,7 @@
             </li>
         </ul>
     </header>
-    <img id="clicker-heart" alt="Click Heart"></img>
+    <main id="clicker-heart"></main>
     <nav>
         <a href="store.html"><p>Store</p><i class="fa-solid fa-store"></i></a>
         <a href="achievements.html"><p>Achievements</p><i class="fa-solid fa-trophy"></i></a>
