--- a/store.html
+++ b/store.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/public/styles/topo-pattern.css">
     <link rel="stylesheet" href="/public/styles/currency-header.css">
     <link rel="stylesheet" href="/public/styles/explosions.css">
+    <link rel="stylesheet" href="/public/styles/popups.css">
 </head>
 <body class="topography-pattern">
     <header>
