Prep wiki for content

--- a/wiki.html
+++ b/wiki.html
@@ -29,24 +29,43 @@
                 Below is an exhaustive list of links to articles primarily explaining the inside-ish jokes involved,
                 plus some other info.
             </p>
-            <h2>Joke explanations</h2>
+            <h2>Links</h2>
             <article>
-                <a href="wiki/placeholder.html">Some very interesting article</a>
-                <p>This article provides some details about this very interesting queer thing.</p>
+                <a href="https://github.com/AAA1exa8/gex_clicker/tree/master">
+                    <picture>
+                        <!-- User prefers light mode: -->
+                        <source srcset="/public/images/wiki/github-mark.svg" media="(prefers-color-scheme: light)"/>
+                    
+                        <!-- User prefers dark mode: -->
+                        <source srcset="/public/images/wiki/github-mark-white.svg"  media="(prefers-color-scheme: dark)"/>
+                    
+                        <!-- User has no color preference: -->
+                        <img src="/public/images/wiki/github-mark.svg"/>
+                    </picture>
+                    Github
+                </a>
             </article>
             <article>
-                <a href="wiki/placeholder.html">Something else</a>
-                <p>This article, for a change, is something else. The something else in question has a very long summary, which serves to serve as a multi-line placeholder to show wrapping.</p>
-            </article>
-            <h2>General queer info</h2>
-            <article>
-                <a href="wiki/placeholder.html">Why are you gae?</a>
-                <p>"Why are you gay?" is a question that has been haunting humanity for a long time. Why don't we answer it?</p>
+                <a href="https://ko-fi.com/miasky">
+                    <img src="/public/images/wiki/kofi_symbol.svg" alt="">
+                    Ko-fi
+                </a>
             </article>
             <article>
-                <a href="wiki/placeholder.html">I'm out of ideas</a>
-                <p>Thinking of placeholders is hard</p>
+                <a href="https://bsky.app/profile/mia.saygex.gay">
+                    <img src="/public/images/wiki/Bluesky_Logo.svg" alt="">
+                    Bluesky
+                </a>
             </article>
+            <article>
+                <a href="/wiki/license.html">
+                    <i class="fa-solid fa-file-contract"></i> License
+                </a>
+            </article>
+            <h2>Item explanations</h2>
+            <p>W.I.P.</p>
+            <h2>Achievement explanations</h2>
+            <p>W.I.P.</p>
             <h2>Done reading?</h2>
             <a href="index.html">You can return to the clicker</a>
         </main>
