Add hideout pattern to store+index

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/currency-header.css">
     <link rel="stylesheet" href="/public/styles/index.css">
-    <link rel="stylesheet" href="/public/styles/topo-pattern.css">
+    <link rel="stylesheet" href="/public/styles/hideout-pattern.css">
     <link rel="stylesheet" href="/public/styles/popups.css">
 </head>
 
-<body class="topography-pattern">
+<body class="hideout-pattern">
     <header>
         <ul>
             <li class="currency" id="bi">
