--- a/store.html
+++ b/store.html
@@ -16,12 +16,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/store.css">
-    <link rel="stylesheet" href="/public/styles/topo-pattern.css">
+    <link rel="stylesheet" href="/public/styles/hideout-pattern.css">
     <link rel="stylesheet" href="/public/styles/currency-header.css">
     <link rel="stylesheet" href="/public/styles/explosions.css">
     <link rel="stylesheet" href="/public/styles/popups.css">
 </head>
-<body class="topography-pattern">
+<body class="hideout-pattern">
     <header>
         <ul>
             <li class="currency" id="bi">
