Add bg acknowledgements to license.html

--- a/wiki/license.html
+++ b/wiki/license.html
@@ -26,7 +26,7 @@
         <main>
             <h2>Licensing</h2>
             <p>
-                This site and tools, specifically HTML, CSS, JS, and Shell code, are distributed under the terms of the MIT License (see below). All code not imported through links is custom to this site, with the exception of <span class="mono">reset.css</span>, which was provided by Bc. Matěj Cajthaml.
+                This site and tools, specifically HTML, CSS, JS, and Shell code, are distributed under the terms of the MIT License (see below). All code not imported through links is custom to this site, with the exception of <span class="mono">reset.css</span> (provided by Bc. Matěj Cajthaml) and patterns from <a href="https://heropatterns.com/">heropatterns.com</a> (<span class="mono">topo-pattern.css</span> and <span class="mono">hideout-pattern.css</span>).
             </p>
             <p>
                 Logos of sites linked on the <a href="/wiki.html">main wiki page</a> belong to the respective companies.
