Acknowledge FA in license.html

--- a/wiki/license.html
+++ b/wiki/license.html
@@ -37,6 +37,9 @@
             <p>
                 Store icons, achievement icons, and wiki images belong to their respective authors. Icons will be replaced with custom pixel art eventually where practicable.
             </p>
+            <p>
+                UI icons are provided by FontAwesome.
+            </p>
             <h2>Inquiries</h2>
             <p>
                 <strong>For copyright and other inquiries, please reach out by e-mail or through Bluesky DMs as linked on the <a href="/wiki.html">main wiki page</a>.</strong>
