--- a/wiki.html
+++ b/wiki.html
@@ -63,7 +63,13 @@
                 </a>
             </article>
             <h2>Item explanations</h2>
-            <p>W.I.P.</p>
+            <article>
+                <a href="/wiki/lemon-bar.html">
+                    <img src="/public/images/icons/Lemon-bar.png" alt="">
+                    Lemon bar / Lemon bar tray
+                </a>
+            </article>
+            <p>More to come</p>
             <h2>Achievement explanations</h2>
             <p>W.I.P.</p>
             <h2>Done reading?</h2>
