--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </nav>
 
     <script src="/scripts/init.js"></script>
+    <script src="/scripts/achiev-service.js"></script>
     <script src="/scripts/index-animations.js"></script>
     <script src="/scripts/game-currencies.js"></script>
     <script src="/scripts/game-main.js"></script>
