--- a/store.html
+++ b/store.html
@@ -64,6 +64,7 @@
     </div>
 
     <script src="/scripts/init.js"></script>
+    <script src="/scripts/achiev-service.js"></script>
     <script src="/scripts/game-currencies.js"></script>
     <script src="/scripts/game-main.js"></script>
     <script src="/scripts/store.js"></script>
