Refactoring; add content (Gus + lemon)

--- a/achievements.html
+++ b/achievements.html
@@ -32,8 +32,18 @@
         </footer>
     </main>
 
+    <!-- Definitions -->
+    <script src="/scripts/dev-items.js"></script>
+    <script src="/scripts/items.js"></script>
+    <script src="/scripts/achiev-defs.js"></script>
+
+    <!-- Libraries -->
     <script src="/scripts/init.js"></script>
+
+    <!-- Runtime -->
     <script src="/scripts/achiev-service.js"></script>
+
+    <!-- UI -->
     <script src="/scripts/achievements.js"></script>
 </body>
 </html>
