--- a/index.html
+++ b/index.html
@@ -55,11 +55,21 @@
         <a href="wiki.html"><p>Wiki</p><i class="fa-solid fa-circle-info"></i></a>
     </nav>
 
+    <!-- Definitions -->
+    <script src="/scripts/dev-items.js"></script>
+    <script src="/scripts/items.js"></script>
+    <script src="/scripts/achiev-defs.js"></script>
+
+    <!-- Libraries -->
     <script src="/scripts/init.js"></script>
+
+    <!-- Runtime -->
     <script src="/scripts/achiev-service.js"></script>
+    <script src="/scripts/game-main.js"></script>
+
+    <!-- UI -->
     <script src="/scripts/index-animations.js"></script>
     <script src="/scripts/game-currencies.js"></script>
-    <script src="/scripts/game-main.js"></script>
 </body>
 
 </html>
