--- a/store.html
+++ b/store.html
@@ -63,10 +63,20 @@
         <p class="explosion-text hidden">New currency unlocked</p>
     </div>
 
+    <!-- Definitions -->
+    <script src="/scripts/dev-items.js"></script>
+    <script src="/scripts/items.js"></script>
+    <script src="/scripts/achiev-defs.js"></script>
+
+    <!-- Libraries -->
     <script src="/scripts/init.js"></script>
+
+    <!-- Runtime -->
     <script src="/scripts/achiev-service.js"></script>
-    <script src="/scripts/game-currencies.js"></script>
     <script src="/scripts/game-main.js"></script>
+
+    <!-- UI -->
+    <script src="/scripts/game-currencies.js"></script>
     <script src="/scripts/store.js"></script>
 </body>
 </html>
